--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -58,7 +58,7 @@ For this study we work with the Pythia 8.219 Python package, which can be called
 Pythia allows users to set the beam center-of-mass energy ($E_{CM}$). By default Pythia sets $E_{CM}$ to 14 TeV, the default for all our programs is 200 GeV.  Initial QCD or QED hard scattering processes may be turned on or off. Pythia also allows restrictions to be set on the transverse momentum produced by hard scattering ($p_{THat}$ or jet $p_T$). For our programs the jet $p_T$ range is typically 20-25 GeV. Figure~\ref{fig_pythia_pT_process} shows the distribution of jet $p_T$ for various QCD and QED processes for jets above 20 GeV. The upper histogram of Figure~\ref{fig_pythia_pT_process} shows the four most common QCD hard processes produced by Pythia. The different processes are shown in the legend. Gluons are represented by "g", quarks (uds) are represented by "q", and anti-quarks ($\overline{uds}$) are represented by "q(bar)." There are also other hard processes, such as those that involve heavy quarks, but they occur so infrequently that they are not included. The lower histogram shows all five of the QED hard processes, however only two of the processes occur frequently. For these processes photons are represented by "gamma," and fermions participating in electroweak interactions are represented by "f" and "f(bar)."
 
 Figure~\ref{fig_2d_pythia_slowjet} shows two lego plots, one for a QCD event and one for a QED event. These plots demonstrate how our programs are able to display each Pythia event. Each particle that is produced from a Pythia event is binned in a 2 dimensional histogram depending on its pseudo-rapidity ($\eta$) and azimuthal angle ($\phi$). The histogram bins are weighted by transverse energy ($E_T$). In both plots it is easy to identify the jets produced by the Pythia events. For the QED plot it is important to note that one of the jets is produced by only a single photon. 
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{pythia_pT_process.pdf}
@@ -66,7 +66,7 @@ Figure~\ref{fig_2d_pythia_slowjet} shows two lego plots, one for a QCD event and
 \label{fig_pythia_pT_process}
 \end{center}
 \end{figure}
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{2d_pythia_slowjet1.png}
@@ -75,7 +75,7 @@ Figure~\ref{fig_2d_pythia_slowjet} shows two lego plots, one for a QCD event and
 \label{fig_2d_pythia_slowjet}
 \end{center}
 \end{figure}
-
+%
 \section{Adding Trento Backgrounds}
 %
 % Describe how Trento is run, list parameters.
@@ -85,7 +85,7 @@ Figure~\ref{fig_2d_pythia_slowjet} shows two lego plots, one for a QCD event and
 %
 \trento\ allows users to input several physical options in order to generate initial states from which we are able to derive realistic heavy ion collision backgrounds. These options include two projectiles, number of events, reduced-thickness, fluctuation, nucleon-width, cross-section, and a normalization factor. For each data set,  we used non-deformed gold (Au) nuclei with 197 nucleons each. We produced 100,000 events for several different cross-sections. All other physical options were left to their default settings: reduced-thickness = 0, fluctuation = 1, nucleon-width = 0.5 fm, and normalization = 1. Different cross-sections correspond to different beam $E_{CM}$ per nucleon pair. The cross-sections (in units of fm$^2$) that we used to simulate the different beam energies are shown in Table~\ref{tab_phenix_trento}.  An important note is that the corresponding cross-section for 14.5 GeV was shown corresponding to 15.0 GeV for the PHENIX data, however we assumed this be a typo. \trento\ reads in the options and produces a text file listing several event properties for each event: event number, impact parameter, number of participants, initial entropy, and properties of flow. The produced \trento\ text files were then imported into our programs as an array of event data.
 %
-\begin{table}[th]
+\begin{table}[h]
 \begin{center}
 \caption{Cross Sections and Scaling Constants}
 \label{tab_phenix_trento}
@@ -112,13 +112,13 @@ $E_{CM}$(GeV) & $\sigma_{nn}$(fm$^2$) & Scaling Constant \\
 \end{tabular}
 \end{center}
 \end{table}
-
+%
 To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data as shown in Figure~\ref{fig_phenix_trento_comp}.  We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. The \trento\ data points are the open shapes that and are connected by lines. Using the scaling constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values. The scaling constants that we used are shown in Table~\ref{tab_phenix_trento}.
 
 Using the \trento\ multiplicity values we generated background particles for each \trento\ event. To generate values of transverse momentum ($p_T$), pseudo-rapidity ($\eta$), and azimuthal angle ($\phi$) for each particle we used the numpy random number generator. For $\phi$  and $\eta$ we created flat distributions between -$\pi$ to $\pi$ and -2 to 2, and for $p_T$ we sampled from a Gaussian deviate, which is equivalent to a thermal Boltzmann distribution. We also included radial and elliptic flow into our background distributions by using the $\epsilon_2$ variable from the \trento\ data. First we calculated the initial transverse rapidity ($y_T$) and then applied flow as an additive boost. 
 \[y_{Boost} = \rho_0 r+ \rho_2  \epsilon_2  cos(2\phi)\]
 The scaling parameter for radial flow ($\rho_0$) that we used was 0.85, taken from Table 2 of~\cite{Retiere:2004hn}.  The scaling parameter for elliptic flow ($\rho_2$) was 0.15 from Figure 4 of~\cite{Alver:2010do}.  Using the numpy random number generator we created a normalized radial distance ($r$). After applying flow, $y_T$ was converted back to $p_T$. The mass used for these calculations was chosen randomly from one of nine different particles that were included in the produced background. These particles consisted of pions, kaons, protons, and neutrons, as well as their anti particle counterparts. Figure~\ref{fig_2d_trento} shows the background display produced from \trento\ events. Again each particle that is produced is binned in a 2 dimensional histogram in ($\eta$,$\phi$) space. For this plot the histogram bins are weighted by $p_T$. There are no jets produced within the \trento\ background.
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{phenix_trento_comp.pdf}
@@ -126,7 +126,7 @@ The scaling parameter for radial flow ($\rho_0$) that we used was 0.85, taken fr
 \label{fig_phenix_trento_comp}
 \end{center}
 \end{figure}
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{2d_trento1.png}
@@ -135,7 +135,7 @@ The scaling parameter for radial flow ($\rho_0$) that we used was 0.85, taken fr
 \label{fig_2d_trento}
 \end{center}
 \end{figure}
-
+%
 \section{Working with SlowJet Finder}
 %
 % Describe SlowJet Finder algorithm and input parameters.
@@ -149,7 +149,7 @@ The {\it anti-k$T$} algorithm functions by finding the hardest particle in an ev
 Figure~\ref{fig_2d_pythia_slowjet_truejet} and Figure~\ref{fig_2d_pythia_trento_slowjet_truejet} demonstrate how well SlowJet is able to function in Pythia events with varying amounts of heavy ion background. Both figures use the same familiar event display that was shown in Figure~\ref{fig_2d_pythia_slowjet} and Figure~\ref{fig_2d_trento} and use the standard SlowJet settings discussed above. In these figures the color scheme is that Pythia jets that are identified correctly by SlowJet are colored green, particles mistakenly identified as SlowJet jets are colored yellow,  Pythia jets that are missed by SlowJet are colored red, and all other background particles are colored blue. Figure~\ref{fig_2d_pythia_slowjet_truejet} shows two Pythia events with no heavy ion background. In the event shown on the left SlowJet correctly identifies both jets. However, in the event on the right, the second jet is too diffuse and SlowJet does not identify it as a jet. Figure~\ref{fig_2d_pythia_trento_slowjet_truejet} is a greater test for SlowJet because now a \trento\ background is introduced. In the low \trento\ multiplicity event, SlowJet is still able to correctly identify the two jets, however a few background particles, shown in yellow, are also lumped in with the jets.  In the high \trento\ multiplicity event SlowJet becomes confused. In this case there are many \trento\ particles identified as jets, those shown in yellow. The true jets become lost in the background and SlowJet fails.
 
 All the bar plots in Figure~\ref{fig_2d_pythia_slowjet_truejet} and Figure~\ref{fig_2d_pythia_trento_slowjet_truejet} are created in a way so that bars are stacked on top of each other if two different color bars share the same bin. The order in which the bars are stacked is that the blue bars corresponding to background not mistaken as jets goes on the bottom. The red bars associated with true jet particles not identified as jets are stacked next. Then the yellow bars associated with falsely identified jets are stacked. Correctly identified jets, shown in green, are then stacked on the very top. This order of stacking the bars is the most useful when displaying very congested events because it is easy to see how SlowJet performed.
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{2d_pythia_slowjet_truejet1.png}
@@ -158,7 +158,7 @@ All the bar plots in Figure~\ref{fig_2d_pythia_slowjet_truejet} and Figure~\ref{
 \label{fig_2d_pythia_slowjet_truejet}
 \end{center}
 \end{figure}
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{2d_pythia_trento_slowjet_truejet1.png}
@@ -167,7 +167,7 @@ All the bar plots in Figure~\ref{fig_2d_pythia_slowjet_truejet} and Figure~\ref{
 \label{fig_2d_pythia_trento_slowjet_truejet}
 \end{center}
 \end{figure}
-
+%
 \section{Studying Jets}
 %
 % Define formula for fragmentation function.
@@ -180,7 +180,7 @@ Figure~\ref{fig_slowJet_vs_pTHat} shows the effect on the SlowJet finder of addi
 Our next focus was on the fragmentation function value ($\xi$) for particles within both SlowJet jets and true jets. $\xi$ provides information on how the energy is distributed along the jet. To calculate $\xi$ we used the following formula:
 \[\xi = ln((\vec{p_{jet}} \cdot \vec{p_{jet}})/(\vec{p_{jet}} \cdot \vec{p_{prt}}))\]
 In Figure~\ref{fig_xi_slowjet_truejet}, $\xi$ is calculated for both QCD and QED events with no \trento\ data on the left and with \trento\ data on the right. $\xi$ is calculated for SlowJet jets with $radius$ set at 0.3, 0.5, and 0.7 in all four plots. In the plots it is noticeable that as $radius$ is decreased the peak of $\xi$ values for reconstructed jets is reduced. This occurs because particles with higher $\xi$ values are farther away from the center of the jet cone. As $radius$ is decreased particles on the edge of the jet cone are no longer included in the reconstructed jets. True jets consist of all particles that are ancestors of the initial hard scattering in each Pythia event. These particles were identified by tracing the daughters of each particle starting with the two initial particles that participated in the hard process and ending when only final state particles remain.
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{slowjet_pTmin_radius1.pdf}
@@ -189,7 +189,7 @@ In Figure~\ref{fig_xi_slowjet_truejet}, $\xi$ is calculated for both QCD and QED
 \label{fig_slowjet_pTmin_radius}
 \end{center}
 \end{figure}
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{slowpT_vs_pThat_pythia.pdf}
@@ -198,7 +198,7 @@ In Figure~\ref{fig_xi_slowjet_truejet}, $\xi$ is calculated for both QCD and QED
 \label{fig_slowJet_vs_pTHat}
 \end{center}
 \end{figure}
-
+%
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{xi_slowjet_truejet.pdf}
@@ -206,9 +206,10 @@ In Figure~\ref{fig_xi_slowjet_truejet}, $\xi$ is calculated for both QCD and QED
 \label{fig_xi_slowjet_truejet}
 \end{center}
 \end{figure}
-
+%
+\clearpage
 \appendix
-
+%
 \section{Listing of Python Scripts}
 \begin{description}
 \item[2d\_pythia\_slowjet.py] Displays Pythia events in ($\eta$,$\phi$) space, SlowJet jets are colored red
